logs/grafana/templates/deployment.yaml
---
# Source: grafana/templates/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: logs-grafana
  namespace: logs
  labels:
    app: grafana
    chart: grafana-3.4.2
    release: logs
    heritage: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
      release: logs
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grafana
        release: logs
      annotations:
        checksum/config: ae8d13c2324c4b4c2f6a104bdfc45261f0db2683da0d214f4c37bdd98e722531
        checksum/dashboards-json-config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/sc-dashboard-provider-config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:
      serviceAccountName: logs-grafana
      securityContext:
        fsGroup: 472
        runAsUser: 472
        
      containers:
        - name: grafana
          image: "grafana/grafana:6.2.2"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: "/etc/grafana/grafana.ini"
              subPath: grafana.ini
            - name: storage
              mountPath: "/var/lib/grafana"
            - name: config
              mountPath: "/etc/grafana/provisioning/datasources/datasources.yaml"
              subPath: datasources.yaml
          ports:
            - name: service
              containerPort: 80
              protocol: TCP
            - name: grafana
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 60
            timeoutSeconds: 30
            
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            
          resources:
            {}
            
      volumes:
        - name: config
          configMap:
            name: logs-grafana
        - name: storage
          emptyDir: {}
