logs/grafana/templates/image-renderer-deployment.yaml
---
# Source: grafana/templates/image-renderer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-grafana-image-renderer
  namespace: monitoring
  labels:
    helm.sh/chart: grafana-6.17.5
    app.kubernetes.io/name: grafana-image-renderer
    app.kubernetes.io/instance: logs
    app.kubernetes.io/version: "8.2.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana-image-renderer
      app.kubernetes.io/instance: logs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana-image-renderer
        app.kubernetes.io/instance: logs
      annotations:
        checksum/config: 3fa76af2ac5032e6c84d2c9e1c93f22a16a73076ff5e3bad030364565274be0f
    spec:
      containers:
        - name: grafana-image-renderer
          image: "grafana/grafana-image-renderer:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            capabilities:
              drop: ['all']
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: image-renderer-tmpfs
      volumes:
        - name: image-renderer-tmpfs
          emptyDir: {}
