logs/grafana/templates/image-renderer-service.yaml
---
# Source: grafana/templates/image-renderer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-image-renderer
  namespace: logs
  labels:
    helm.sh/chart: grafana-6.17.5
    app.kubernetes.io/name: grafana-image-renderer
    #app.kubernetes.io/instance: unhelm
    app.kubernetes.io/version: "8.2.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app.kubernetes.io/name: grafana-image-renderer
    #app.kubernetes.io/instance: unhelm
