logs/grafana/templates/service.yaml
---
# Source: grafana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: logs
  labels:
    helm.sh/chart: grafana-6.28.0
    app.kubernetes.io/name: grafana
    #app.kubernetes.io/instance: unhelm
    app.kubernetes.io/version: "8.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: 3000

  selector:
    app.kubernetes.io/name: grafana
    #app.kubernetes.io/instance: unhelm
