logs/grafana/templates/image-renderer-network-policy.yaml
---
# Source: grafana/templates/image-renderer-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: logs-grafana-image-renderer-ingress
  namespace: monitoring
  annotations:
    comment: Limit image-renderer ingress traffic from grafana
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana-image-renderer
      app.kubernetes.io/instance: logs

  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8081
          protocol: TCP
      from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
              app.kubernetes.io/instance: logs
